--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -6,7 +6,43 @@
 </head>
 <body>
     <h1 id="top">Ethan Nguyen's Homepage</h1>
-    
+    <figure>
+        <img src="../img/witProfile.jpg" alt="That's me at WIT 2019!" title="That's me! Ethan Nguyen" width="550" height="500" /> <br/>
+        <figcaption>2019 Women in Tech (WIT) Event</figcaption>
+    </figure>
+
+    <section>
+        <h2>About Me</h2>
+        <article>
+            <p>
+                Hi! Welcome to my first ever attempt at making a webpage. My name is <strong>Ethan Nguyen</strong>. Currently (while developing this web page) I am a senior at Kennesaw State University (KSU). <br />
+                This is the first assignment in my Internet Programming (CS4720) class. As the semester progresses, I hoped to be able to update and build upon later edition of this web page to show my progress in the class. <br />
+                You find my codes and programming assignments online from my Github (link below). My goal for these assignments is to flesh them out in hope that it can be used as an "Online Resume" that I can dump projects and work into.
+            </p>
+        </article>
+        <article>
+            <h3>You can find me on these Platforms!</h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/luckynguyen/">LinkindIn</a> </li>
+                <li><a href="https://github.com/lucky15987/">Github</a> </li>
+                <li><a href="https://www.twitch.tv/lucky15987">Twitch</a> </li>
+            </ul>
+        </article>
+    </section>
+    <section>
+        <h2>Education</h2>
+        <details>
+            <summary>Kennesaw State University (KSU)</summary>
+            <p><strong>Attended</strong>: Aug 2016 - Present</p>
+            <p><strong>Degree</strong>: Bachelor's in Computer Science (In Progress/Summer 2020)</p>
+        </details>
+        <details>
+            <summary>Georgia State University (GSU)</summary>
+            <p><strong>Attended</strong>: Aug 2013 - May 2016</p>
+            <p><strong>Degree</strong>: Associate's in Engineering</p>
+        </details>
+    </section>
+
 <a href="#top">Go to top</a>
 </body>
 </html>
