--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -31,16 +31,49 @@
     </section>
     <section>
         <h2>Education</h2>
+            <h3>Kennesaw State University (KSU)</h3>
+        <ul>
+            <li><strong>Attended</strong>: Aug 2016 - Present</li>
+            <li><strong>Degree</strong>: Bachelor's in Computer Science (In Progress/Summer 2020)</li>
+        </ul>
+
+            <h3>Georgia State University (GSU)</h3>
+        <ul>
+            <li><strong>Attended</strong>: Aug 2013 - May 2016</li>
+            <li><strong>Degree</strong>: Associate's in Engineering</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Work History</h2>
         <details>
-            <summary>Kennesaw State University (KSU)</summary>
-            <p><strong>Attended</strong>: Aug 2016 - Present</p>
-            <p><strong>Degree</strong>: Bachelor's in Computer Science (In Progress/Summer 2020)</p>
+            <summary>Microsoft Corporation</summary>
+            <p><strong>Time Period</strong>: May 2017 - Present</p>
+            <p><strong>Position</strong>: Product Advisor</p>
+            <ul>
+                <li>Integrate Microsoft services to client's company infrastructure.</li>
+                <li>Train clients tro use various Microsoft Products (Word, Excel, PowerPoint, Visio, Publisher, etc.</li>
+                <li>Integrate cloud services (Azure, Dynamics, Microsoft 365)</li>
+                <li>Consult with IT administrators on best course of action to improving company's network servers and systems.</li>
+            </ul>
         </details>
         <details>
-            <summary>Georgia State University (GSU)</summary>
-            <p><strong>Attended</strong>: Aug 2013 - May 2016</p>
-            <p><strong>Degree</strong>: Associate's in Engineering</p>
+            <summary>Kirusoft Dev.</summary>
+            <p><strong>Time Period</strong>: Jan 2014 - Present</p>
+            <p><strong>Position</strong>: Intern Project Manager</p>
+            <ul>
+                <li>Keeping in contact with clients (giving build/development updates in regard to their product.</li>
+                <li>Staying in contact with the development team to ensure project milestones and product progression is reached.</li>
+                <li>Providing product demos to client and adjusting development goals based on client feedback.</li>
+                <li>Managing multiple teams on various projects.</li>
+            </ul>
         </details>
+    </section>
+    <section>
+        <h2>Awards/Projects</h2>
+        <ul>
+            <li>Microsoft August 2017 MVP Award</li>
+            <li><a href="https://1drv.ms/b/s!AibOGq6MCXYfgtV-5nTwXNgt2PKaFQ?e=RTRYlK">Between people with Autism and neurotypical people, what are the differences in brain activity? <strong>[Research Paper]</strong></a> </li>
+        </ul>
     </section>
 
 <a href="#top">Go to top</a>
