--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -23,7 +23,7 @@
         <article>
             <h3>You can find me on these Platforms!</h3>
             <ul>
-                <li><a href="https://www.linkedin.com/in/luckynguyen/">LinkindIn</a> </li>
+                <li><a href="https://www.linkedin.com/in/luckynguyen/">LinkindIn [Must be signed into first!]</a> </li>
                 <li><a href="https://github.com/lucky15987/">Github</a> </li>
                 <li><a href="https://www.twitch.tv/lucky15987">Twitch</a> </li>
             </ul>
