Updated tags for clarity.

--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -7,8 +7,7 @@
 <body>
     <h1 id="top">Ethan Nguyen's Homepage</h1>
     <figure>
-        <img alt="That's me at WIT 2019!" height="500" src="../img/witProfile.jpg" title="That's me! Ethan Nguyen"
-             width="550"/> <br/>
+        <img  src="../img/witProfile.jpg"  alt="That's me at WIT 2019!" title="That's me! Ethan Nguyen" height="500" width="550"/> <br/>
         <figcaption>2019 Women in Tech (WIT) Event</figcaption>
     </figure>
 
